Fix text visibility in text fields

--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -85,6 +85,7 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   box-shadow: 0 0 0 1pt black;
+  color: black;
 }
 
 .field_with_errors {
