--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -110,10 +110,12 @@ hr {
 
 input[type="text"] {
   color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 input:focus-visible {
   outline: none;
+  color: black;
 }
 
 textarea,
